--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Test</title>
+<!doctype html>
+<html lang="en" data-bs-theme="auto">
+	<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Bootstrap Table</title>
+	<meta name="description" content="Slot Demo adalah layanan akun permainan slot gratis Pragmatic Play demo terlengkap untuk slotter mainkan tanpa perlu melakukan deposit uang asli apapun.">
+	<meta name="keywords" content="slot demo, demo slot, slot demo pragmatic, slot demo gratis, slot demo anti lag, slot demo terlengkap, slot demo pg soft, slot demo pg, demo slot pg, akun slot demo">
+	<link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="https://unpkg.com/bootstrap-table@1.22.0/dist/bootstrap-table.min.css" rel="stylesheet">
+	<meta name="theme-color" content="#712cf9">
 </head>
 <body>
-
+<header data-bs-theme="dark">
+	<div class="navbar navbar-dark bg-dark shadow-sm">
+		<div class="container">
+			<a href="#" class="navbar-brand d-flex align-items-center"><strong>Bootstrap Table</strong></a>
+		</div>
+	</div>
+</header>
+<main>
+	<section class="py-5 text-center container">
+		<div class="row py-lg-5">
+			<div class="col-12">
+				<h1 class="fw-light">Bootstrap Table</h1>
+				<p class="lead text-body-secondary">An extended table to the integration with some of the most widely used CSS frameworks. (Supports Bootstrap, Semantic UI, Bulma, Material Design, Foundation)</p>
+			</div>
+		</div>
+	</section>
+	<div class="album py-5 bg-body-tertiary">
+		<div class="container">
+			<div class="row g-3">
+				<div class="col-md-12">
+					<table id="table" data-toggle="table" data-url="https://slot-gacor.cam/ajax/backlink2">
+						<thead>
+							<tr>
+								<th data-field="id">ID</th>
+								<th data-field="name">Name</th>
+								<th data-field="title">Title</th>
+								<th data-field="link">Link</th>
+							</tr>
+						</thead>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+</main>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.22.0/dist/bootstrap-table.min.js"></script>
 </body>
 </html>
