--- a/index.html
+++ b/index.html
@@ -47,6 +47,28 @@
 		</div>
 	</div>
 </main>
+	<div style="display:none">
+							<a href="https://rtp.slot-gacor.cam">RTP Slot Gacor</a>
+<a href="https://slots.vermoxpill.com">Slot Gacor</a>
+<a href="https://www.slotdb.info">Slot Gacor</a>
+<a href="https://www.ppgames.link">Slot Demo</a>
+<a href="https://www.loginasia88bet.lol">Asia88bet</a>
+<a href="https://www.linkalternatifasia88bet.sbs">Asia88bet</a>
+<a href="https://www.cicsports.org">Slot Gacor</a>
+<a href="https://www.atgroupslot.com">Slot Gacor</a>
+<a href="https://www.asia88betvip.store">Asia88bet</a>
+<a href="https://www.asia88betvip.bond">Asia88bet</a>
+<a href="https://www.asia88betslot.online">Asia88bet</a>
+<a href="https://www.asia88betslotlogin.click">Asia88bet</a>
+<a href="https://www.asia88betskuy.click">Asia88bet</a>
+<a href="https://www.asia88bet.site">Asia88bet</a>
+<a href="https://www.asia88bet.online">Asia88bet</a>
+<a href="https://www.asia88betlinkalternatif.cyou">Asia88bet</a>
+<a href="https://www.asia88betalternatif.fun">Asia88bet</a>
+<a href="https://www.alternatifasia88bet.cfd">Asia88bet</a>
+<a href="https://www.agenslot.sbs">Slot Gacor</a>
+				
+	</div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/bootstrap-table@1.22.0/dist/bootstrap-table.min.js"></script>
