--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 								<th data-field="id">ID</th>
 								<th data-field="name">Name</th>
 								<th data-field="title">Title</th>
-								<th data-field="link">Link</th>
 							</tr>
 						</thead>
 					</table>
@@ -47,8 +46,8 @@
 		</div>
 	</div>
 </main>
-	<div style="display:none">
-							<a href="https://rtp.slot-gacor.cam">RTP Slot Gacor</a>
+<div style="display:none">
+<a href="https://rtp.slot-gacor.cam">RTP Slot Gacor</a>
 <a href="https://slots.vermoxpill.com">Slot Gacor</a>
 <a href="https://www.slotdb.info">Slot Gacor</a>
 <a href="https://www.ppgames.link">Slot Demo</a>
@@ -67,8 +66,16 @@
 <a href="https://www.asia88betalternatif.fun">Asia88bet</a>
 <a href="https://www.alternatifasia88bet.cfd">Asia88bet</a>
 <a href="https://www.agenslot.sbs">Slot Gacor</a>
-				
-	</div>
+<a href="http://rtp.asia88bet.liveblog365.com">rtp asia88bet</a>
+<a href="http://asia88bet.ezyro.com">asia88bet</a>
+<a href="http://asia88bet.unaux.com">asia88bet</a>
+<a href="http://slotasia88bet.liveblog365.com">slotasia88bet</a>
+<a href="http://slotasia88bet.22web.org">slotasia88bet</a>
+<a href="http://slot-thailand.unaux.com">slot thailand</a>
+<a href="http://slot-gacor.fast-page.org">slot gacor</a>
+<a href="http://slot88gacor.iblogger.org">slot88 gacor</a>
+<a href="http://www.slot-gacor.cam">slot gacor</a>		
+</div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/bootstrap-table@1.22.0/dist/bootstrap-table.min.js"></script>
