--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 <a href="https://www.alternatifasia88bet.cfd">Asia88bet</a>
 <a href="https://www.agenslot.sbs">Slot Gacor</a>
 <a href="http://rtp.asia88bet.liveblog365.com">rtp asia88bet</a>
-<a href="http://asia88bet.ezyro.com">asia88bet</a>
-<a href="http://asia88bet.unaux.com">asia88bet</a>
-<a href="http://slotasia88bet.liveblog365.com">slotasia88bet</a>
-<a href="http://slotasia88bet.22web.org">slotasia88bet</a>
-<a href="http://slot-thailand.unaux.com">slot thailand</a>
-<a href="http://slot-gacor.fast-page.org">slot gacor</a>
 <a href="http://slot88gacor.iblogger.org">slot88 gacor</a>
+<a href="http://slot-gacor.fast-page.org">slot gacor</a>
+<a href="http://slot-thailand.unaux.com">slot thailand</a>
+<a href="http://slotasia88bet.22web.org">slot asia88bet</a>
+<a href="http://slotasia88bet.liveblog365.com">slot asia88bet</a>
+<a href="http://asia88bet.unaux.com">asia88bet</a>
+<a href="http://asia88bet.ezyro.com">asia88bet</a><
 <a href="http://www.slot-gacor.cam">slot gacor</a>		
 </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
