--- a/index.html
+++ b/index.html
@@ -48,34 +48,51 @@
 </main>
 	
 <div style="display:none">
-<a href="https://rtp.slot-gacor.cam">RTP Slot Gacor</a>
-<a href="https://slots.vermoxpill.com">Slot Gacor</a>
-<a href="https://www.slotdb.info">Slot Gacor</a>
-<a href="https://www.ppgames.link">Slot Demo</a>
-<a href="https://www.loginasia88bet.lol">Asia88bet</a>
-<a href="https://www.linkalternatifasia88bet.sbs">Asia88bet</a>
-<a href="https://www.cicsports.org">Slot Gacor</a>
-<a href="https://www.atgroupslot.com">Slot Gacor</a>
-<a href="https://www.asia88betvip.store">Asia88bet</a>
-<a href="https://www.asia88betvip.bond">Asia88bet</a>
-<a href="https://www.asia88betslot.online">Asia88bet</a>
-<a href="https://www.asia88betslotlogin.click">Asia88bet</a>
-<a href="https://www.asia88betskuy.click">Asia88bet</a>
-<a href="https://www.asia88bet.site">Asia88bet</a>
-<a href="https://www.asia88bet.online">Asia88bet</a>
-<a href="https://www.asia88betlinkalternatif.cyou">Asia88bet</a>
-<a href="https://www.asia88betalternatif.fun">Asia88bet</a>
-<a href="https://www.alternatifasia88bet.cfd">Asia88bet</a>
-<a href="https://www.agenslot.sbs">Slot Gacor</a>
-<a href="http://rtp.asia88bet.liveblog365.com">rtp asia88bet</a>
-<a href="http://slot88gacor.iblogger.org">slot88 gacor</a>
-<a href="http://slot-gacor.fast-page.org">slot gacor</a>
-<a href="http://slot-thailand.unaux.com">slot thailand</a>
-<a href="http://slotasia88bet.22web.org">slot asia88bet</a>
-<a href="http://slotasia88bet.liveblog365.com">slot asia88bet</a>
-<a href="http://asia88bet.unaux.com">asia88bet</a>
-<a href="http://asia88bet.ezyro.com">asia88bet</a><
-<a href="http://www.slot-gacor.cam">slot gacor</a>		
+<a href="http://asia88bet.atspace.cc/">ASIA88BET</a>
+<a href="http://dewataslot.is-great.org/">DEWATASLOT</a>
+<a href="http://dewataslot.is-great.net/">DEWATASLOT</a>
+<a href="http://dewataslot.is-best.net/">DEWATASLOT</a>
+<a href="http://dewataslot.synergize.co/">DEWATASLOT</a>
+<a href="http://dewataslot.html-5.me/">DEWATASLOT</a>
+<a href="http://dewataslot.a0001.net/">DEWATASLOT</a>
+<a href="http://dewataslot.66ghz.com/">DEWATASLOT</a>
+<a href="http://dewataslot.2kool4u.net/">DEWATASLOT</a>
+<a href="http://dewataslot.10001mb.com/">DEWATASLOT</a>
+<a href="http://dewataslot.loveslife.biz/">DEWATASLOT</a>
+<a href="https://www.dewase7en.com/">AMPDEV</a>
+<a href="https://asia88bet.000webhostapp.com/">ASIA88BET</a>
+<a href="http://slotgacor.web1337.net/">SLOT GACOR</a>
+<a href="http://slot4d.nichesite.org/">SLOT 4D</a>
+<a href="http://asia88bet.liveblog365.com/">ASIA88BET</a>
+<a href="http://gates-of-olympus.fanclub.rocks/">SLOT DEMO</a>
+<a href="http://slot88gacor.iblogger.org/">SLOT88</a>
+<a href="http://slot-gacor.fast-page.org/">SLOT GACOR</a>
+<a href="http://slot-thailand.unaux.com/">SLOT THAILAND</a>
+<a href="http://slotasia88bet.22web.org/">ASIA88BET</a>
+<a href="http://slotasia88bet.liveblog365.com/">ASIA88BET</a>
+<a href="http://asia88bet.unaux.com/">ASIA88BET</a>
+<a href="http://asia88bet.ezyro.com/">ASIA88BET</a>
+<a href="https://slots.vermoxpill.com/">SLOT88</a>
+<a href="https://rtp.slot-gacor.cam/">LIVE RTP</a>
+<a href="https://www.slotdb.info/">SLOT88</a>
+<a href="https://www.atgroupslot.com/">AURORATOTO GROUP</a>
+<a href="https://asia88bet.goreggaesunsplash.com/">ASIA88BET</a>
+<a href="https://www.loginasia88bet.lol/">ASIA88BET</a>
+<a href="https://www.linkalternatifasia88bet.sbs/">ASIA88BET</a>
+<a href="https://www.asia88betvip.store/">ASIA88BET</a>
+<a href="https://www.asia88betvip.bond/">ASIA88</a>
+<a href="https://www.asia88betslot.online/">ASIA88BET</a>
+<a href="https://www.asia88betslotlogin.click/">ASIA88BET</a>
+<a href="https://www.asia88betskuy.click/">Asia88bet</a>
+<a href="https://www.asia88bet.site/">ASIA88BET</a>
+<a href="https://www.asia88bet.online/">ASIA88BET</a>
+<a href="https://www.asia88betlinkalternatif.cyou/">ASIA88BET</a>
+<a href="https://www.asia88betalternatif.fun/">Asia88bet</a>
+<a href="https://www.alternatifasia88bet.cfd/">ASIA88BET</a>
+<a href="https://www.agenslot.sbs/">Slot88</a>
+<a href="https://www.ppgames.link/">SLOTDEMO</a>
+<a href="https://www.cicsports.org/">AMPDEV</a>
+<a href="https://app.ampdev.online/">AMPDEV</a>	
 </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
